--- a/scai/blaskernel/test/code_coverageThird.sh.in
+++ b/scai/blaskernel/test/code_coverageThird.sh.in
@@ -38,7 +38,9 @@ requirements_coverage
 dirname=$(find_dir)
 echo "Found coverage directory: ${dirname}"
 
-rm LAPACKTest.cpp.gcno
+# todo: remove this if jenkins cc works fine without it
+# problem with these, so first ignore
+rm LAPACKTest.cpp.gcno LAPACKTest.cpp.gcda
 
 do_coverage $dirname ../.. "@CMAKE_SOURCE_DIR@"
 
