And corrected CMake configuration.

--- a/scai/lama/io/CMakeLists.txt
+++ b/scai/lama/io/CMakeLists.txt
@@ -44,7 +44,7 @@ scai_project (
         SAMGIO
         MatrixMarketIO
         PETScIO
-        MatlabIO
+        TextIO
         PartitionIO
 
     HEADERS
