Added default implementation for decomposition solver without MKL

--- a/scai/solver/CMakeLists.txt
+++ b/scai/solver/CMakeLists.txt
@@ -115,11 +115,12 @@ scai_project (
         CGNE
         CGNR
         CGS
-        DecompositionSolver
+        ## DecompositionSolver
         GMRES
         InverseSolver
         IterativeSolver
         Jacobi
+        Kaczmarz
         MINRES
         OmegaSolver
         QMR
