BOOST_CHECK_THROW also requires a semikolon

--- a/scai/solver/CMakeLists.txt
+++ b/scai/solver/CMakeLists.txt
@@ -115,7 +115,7 @@ scai_project (
         CGNE
         CGNR
         CGS
-        ## DecompositionSolver
+        DecompositionSolver
         GMRES
         InverseSolver
         IterativeSolver
