--- a/scai/solver/test/CMakeLists.txt
+++ b/scai/solver/test/CMakeLists.txt
@@ -57,6 +57,7 @@ scai_project (
         IterationCountTest
         IterativeSolverTest
         JacobiTest
+        KaczmarzTest
         MINRESTest
         QMRTest
         ResidualStagnationTest
