Update of tracing test to work correctly if OpenMP is disabled.

--- a/scai/tracing/test/make.inc.in
+++ b/scai/tracing/test/make.inc.in
@@ -34,7 +34,7 @@
 
 SCAI_ROOT = ${CMAKE_INSTALL_PREFIX}
 
-SCAI_BOOST_INCLUDE_DIR = ${SCAI_BOOST_INCLUDE_DIR}
+SCAI_BOOST_INCLUDE_DIR = ${BOOST_INCLUDE_DIR}
 
 CXX = ${CMAKE_CXX_COMPILER}
 
