Fixed permission problem for test in SCAI tracing

--- a/scai/tracing/CMakeLists.txt
+++ b/scai/tracing/CMakeLists.txt
@@ -140,15 +140,25 @@ endif ( USE_CODE_COVERAGE )
 
 configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/test/make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/test/make.inc" )
 
+# The shell script test.sh uses NUM_THREADS_TEST to verify tracing for threads
+
 if ( USE_OPENMP )
    set ( NUM_THREADS_TEST 4 )
 else ( USE_OPENMP )
    set ( NUM_THREADS_TEST 1 )
 endif ( USE_OPENMP )
 
-configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/test/test.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/test/test.sh" @ONLY )
+# Now configure test.sh and set correct permission
+
+configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/test/test.sh.in"
+                 "${CMAKE_CURRENT_BINARY_DIR}/test/conf/test.sh" @ONLY )
+
+file ( COPY "${CMAKE_CURRENT_BINARY_DIR}/test/conf/test.sh" 
+       DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/test"
+       FILE_PERMISSIONS ${PROJECT_FILE_PERMISSIONS} )
 
 set ( TEST_FILES Makefile README simpleTracing.cpp )
+
 foreach    ( TEST_FILE ${TEST_FILES} )
     file ( COPY ${CMAKE_CURRENT_SOURCE_DIR}/test/${TEST_FILE}
            DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/test
