--- a/scai/sparsekernel/test/code_coverageSecond.sh.in
+++ b/scai/sparsekernel/test/code_coverageSecond.sh.in
@@ -42,18 +42,18 @@ error_count=0
 
 # Running tests serial
 echo "Running sparsekernel tests on Host"
-count_error ./sparsekernelTest --SCAI_CONTEXT=Host --SCAI_USE_MKL=0
-count_error ./sparsekernelTest --SCAI_CONTEXT=Host --SCAI_USE_MKL=1
+count_error SCAI_USE_MKL=0 ./sparsekernelTest --SCAI_CONTEXT=Host
+count_error SCAI_USE_MKL=1 ./sparsekernelTest --SCAI_CONTEXT=Host 
 
 if [ -d ../cuda ];
 then
     #Running common CUDA tests
     echo "Running sparsekernel tests with CUDA context"
-    count_error ./sparsekernelTest --SCAI_CONTEXT=CUDA --SCAI_CUDA_USE_TEXTURE=0 --SCAI_CUDA_USE_SHARED_MEM=0 --SCAI_CUDA_USE_CUSPARSE=0
-    count_error ./sparsekernelTest --SCAI_CONTEXT=CUDA --SCAI_CUDA_USE_TEXTURE=0 --SCAI_CUDA_USE_SHARED_MEM=1 --SCAI_CUDA_USE_CUSPARSE=0
-    count_error ./sparsekernelTest --SCAI_CONTEXT=CUDA --SCAI_CUDA_USE_TEXTURE=1 --SCAI_CUDA_USE_SHARED_MEM=0 --SCAI_CUDA_USE_CUSPARSE=0
-    count_error ./sparsekernelTest --SCAI_CONTEXT=CUDA --SCAI_CUDA_USE_TEXTURE=1 --SCAI_CUDA_USE_SHARED_MEM=1 --SCAI_CUDA_USE_CUSPARSE=0
-    count_error ./sparsekernelTest --SCAI_CONTEXT=CUDA --SCAI_CUDA_USE_CUSPARSE=1
+    count_error SCAI_CUDA_USE_CUSPARSE=0 ./sparsekernelTest --SCAI_CONTEXT=CUDA --SCAI_CUDA_USE_TEXTURE=0 --SCAI_CUDA_USE_SHARED_MEM=0
+    count_error SCAI_CUDA_USE_CUSPARSE=0 ./sparsekernelTest --SCAI_CONTEXT=CUDA --SCAI_CUDA_USE_TEXTURE=0 --SCAI_CUDA_USE_SHARED_MEM=1
+    count_error SCAI_CUDA_USE_CUSPARSE=0 ./sparsekernelTest --SCAI_CONTEXT=CUDA --SCAI_CUDA_USE_TEXTURE=1 --SCAI_CUDA_USE_SHARED_MEM=0 
+    count_error SCAI_CUDA_USE_CUSPARSE=0 ./sparsekernelTest --SCAI_CONTEXT=CUDA --SCAI_CUDA_USE_TEXTURE=1 --SCAI_CUDA_USE_SHARED_MEM=1 
+    count_error SCAI_CUDA_USE_CUSPARSE=1 ./sparsekernelTest --SCAI_CONTEXT=CUDA 
 fi
 
 if [ -d ../mic ]
