Test for SCAI_UNSUPPORTED feature

--- a/scai/common/test/CMakeLists.txt
+++ b/scai/common/test/CMakeLists.txt
@@ -38,6 +38,7 @@ set ( CXX_SOURCES
       commonTest
       ConstantsTest
       ContextTypeTest
+      ExceptionTest  
       FactoryTest  
       Factory1Test  
       FactoryTest
