--- a/scai/blaskernel/test/code_coverageSecond.sh.in
+++ b/scai/blaskernel/test/code_coverageSecond.sh.in
@@ -41,7 +41,15 @@ export SCAI_TRACE=time
 error_count=0
 
 # Running blaskernel serial
-echo "Running blaskernel tests on Host"
+
+echo "Running blaskernel tests on Host, internal blas/lapack"
+export SCAI_USE_BLAS=0
+export SCAI_USE_LAPACK=0
+count_error ./blaskernelTest --SCAI_CONTEXT=Host
+
+echo "Running blaskernel tests on Host, external blas/lapack"
+export SCAI_USE_BLAS=1
+export SCAI_USE_LAPACK=1
 count_error ./blaskernelTest --SCAI_CONTEXT=Host
 
 if [ -d ../cuda ]
