--- a/scai/solver/test/code_coverage.sh.in
+++ b/scai/solver/test/code_coverage.sh.in
@@ -30,8 +30,8 @@
  # @endlicense
  #
  # @brief This file is a shellscript, which contains all necessary steps to 
- #        measure code coverage of LAMA.
- # @author Alexander Büchel, Lauretta Schubert
+ #        measure code coverage of LAMA follow project solver.
+ # @author Lauretta Schubert
  # @date 15.08.2012
 ###
 
