--- a/scai/blaskernel/test/code_coverageThird.sh.in
+++ b/scai/blaskernel/test/code_coverageThird.sh.in
@@ -24,9 +24,8 @@
  # along with LAMA. If not, see <http://www.gnu.org/licenses/>.
  # @endlicense
  #
- # @brief This file is a shellscript, which contains all necessary steps to 
- #        measure code coverage of LAMA.
- # @author Alexander Büchel, Lauretta Schubert
+ # @brief Shell script to generate html pages of code coverage test runs.
+ # @author Lauretta Schubert, Eric Schricker
  # @date 15.08.2012
 ###
 
