--- a/scai/hmemo/test/code_coverage.sh.in
+++ b/scai/hmemo/test/code_coverage.sh.in
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 ###
- # @file code_coverage.sh
+ # @file hmemo/test/code_coverage.sh
  #
  # @license
  # Copyright (c) 2009-2016
@@ -25,8 +25,8 @@
  # @endlicense
  #
  # @brief This file is a shellscript, which contains all necessary steps to 
- #        measure code coverage of LAMA.
- # @author Alexander Büchel, Lauretta Schubert
+ #        measure code coverage of LAMA subproject hmemo
+ # @author Lauretta Schubert
  # @date 15.08.2012
 ###
 
