--- a/scai/tracing/test/code_coverage.sh.in
+++ b/scai/tracing/test/code_coverage.sh.in
@@ -26,7 +26,7 @@
  #
  # @brief This file is a shellscript, which contains all necessary steps to 
  #        measure code coverage of LAMA.
- # @author Alexander Büchel, Lauretta Schubert
+ # @author Lauretta Schubert, Eric Schricker
  # @date 15.08.2012
 ###
 
