Added first version of SparseVector but mostly clarifications on Vector/DenseVector

--- a/scai/lama/CMakeLists.txt
+++ b/scai/lama/CMakeLists.txt
@@ -108,6 +108,7 @@ scai_project (
     CLASSES                  # .cpp, .hpp
 
         DenseVector
+        SparseVector
         Vector
 
     HEADERS                  # .hpp only
