Added new kernel trait to deal with sparse vectors / arrays.

--- a/scai/utilskernel/CMakeLists.txt
+++ b/scai/utilskernel/CMakeLists.txt
@@ -116,6 +116,7 @@ scai_project (
         LArray
         LArrayRef
         UtilKernelTrait
+        SparseKernelTrait
         BinaryOp
         UnaryOp
 )
