Added new SingleDistribution class.

--- a/scai/dmemo/CMakeLists.txt
+++ b/scai/dmemo/CMakeLists.txt
@@ -127,6 +127,7 @@ scai_project (
         HaloBuilder
         NoDistribution
         Redistributor
+        SingleDistribution
 
         ${METISDISTRIBUTION}
 
