--- a/scai/dmemo/CMakeLists.txt
+++ b/scai/dmemo/CMakeLists.txt
@@ -123,6 +123,7 @@ scai_project (
         Distribution
         GenBlockDistribution
         GeneralDistribution
+        GridDistribution
         Halo
         HaloBuilder
         NoDistribution
