--- a/scai/dmemo/test/CMakeLists.txt
+++ b/scai/dmemo/test/CMakeLists.txt
@@ -58,6 +58,7 @@ scai_project (
         CyclicDistributionTest
         GenBlockDistributionTest
         GeneralDistributionTest
+        GridDistributionTest
         SingleDistributionTest
         ${MetisDistributionTest}
 
