common correctly updated now.

--- a/scai/common/CMakeLists.txt
+++ b/scai/common/CMakeLists.txt
@@ -188,6 +188,7 @@ set ( COMMON_CLASSES
 
 set ( COMMON_HEADERS 
         config
+        BinaryOp
         Constants
         Factory
         Factory1
@@ -195,6 +196,7 @@ set ( COMMON_HEADERS
         Math
         OpenMP
         NonCopyable
+        UnaryOp
         Utils
 )
 
