--- a/scai/lama/CMakeLists.txt
+++ b/scai/lama/CMakeLists.txt
@@ -107,8 +107,12 @@ scai_project (
 
     CLASSES                  # .cpp, .hpp
 
+        _DenseVector
+        _SparseVector
+
         DenseVector
         SparseVector
+
         Vector
 
     HEADERS                  # .hpp only
