Update kaczmarz examples

--- a/scai/lama/examples/kaczmarz/CMakeLists.txt
+++ b/scai/lama/examples/kaczmarz/CMakeLists.txt
@@ -32,7 +32,7 @@
  # @date 02.12.2015
 ###
 
-foreach ( executable kaczmarz kaczmarz1 kaczmarzPar runtest )
+foreach ( executable kaczmarz kaczmarzPar )
     add_executable( ${executable}.exe ${executable}.cpp )
     target_link_libraries( ${executable}.exe ${PROJECT_NAME} )
     set ( EXAMPLE_FILES ${EXAMPLE_FILES} ${executable}.cpp )
