Added example program to compute the Fiedler vector.

--- a/scai/solver/examples/eigenvalue/CMakeLists.txt
+++ b/scai/solver/examples/eigenvalue/CMakeLists.txt
@@ -32,7 +32,7 @@
  # @date 02.12.2015
 ###
 
-foreach ( executable inverse potenz )
+foreach ( executable inverse potenz fiedler )
     add_executable( ${executable}.exe ${executable}.cpp )
     target_link_libraries( ${executable}.exe ${PROJECT_NAME} )
     set ( EXAMPLE_FILES ${EXAMPLE_FILES} ${executable}.cpp )
