Moved stencil kernels from example to sparsekernel library.

--- a/scai/sparsekernel/CMakeLists.txt
+++ b/scai/sparsekernel/CMakeLists.txt
@@ -117,6 +117,7 @@ scai_project (
         DIAKernelTrait
         ELLKernelTrait
         JDSKernelTrait
+        StencilKernelTrait
         
 )
 
