--- a/scai/sparsekernel/openmp/CMakeLists.txt
+++ b/scai/sparsekernel/openmp/CMakeLists.txt
@@ -45,6 +45,8 @@ scai_project(
         OpenMPELLUtils
         OpenMPJDSUtils
         
+        OpenMPStencilKernel
+
     HEADERS        # .hpp
 
 
