Test routines for stencil kernels added, first version available on CUDA, to be optimized

--- a/scai/sparsekernel/cuda/CMakeLists.txt
+++ b/scai/sparsekernel/cuda/CMakeLists.txt
@@ -48,6 +48,7 @@ scai_project(
         CUDADIAUtils
         CUDAELLUtils
         CUDAJDSUtils
+        CUDAStencilKernel
 
     CUDA_SOURCES   # .cu
 
