Stencil class to common added, improved, written test and added doc

--- a/scai/common/test/CMakeLists.txt
+++ b/scai/common/test/CMakeLists.txt
@@ -56,6 +56,7 @@ set ( CXX_SOURCES
       ConstantsTest
       ScalarTypeTest  
       SettingsTest  
+      StencilTest  
       WalltimeTest  
 )
 
