--- a/scai/lama/storage/CMakeLists.txt
+++ b/scai/lama/storage/CMakeLists.txt
@@ -42,6 +42,7 @@ set ( CLASSES
         JDSStorage
         MatrixStorage
         SparseAssemblyStorage
+        StencilStorage
         StorageMethods
     )
     
