--- a/scai/lama/test/matrix/CMakeLists.txt
+++ b/scai/lama/test/matrix/CMakeLists.txt
@@ -48,6 +48,7 @@ scai_project (
 
         MatrixConstructorTest
         SparseMatrixTest
+        StencilMatrixTest
         DenseMatrixTest
 
         lamaMatrixTest
