Added own IO classes for different image formats, improved functionality

--- a/scai/lama/examples/image/CMakeLists.txt
+++ b/scai/lama/examples/image/CMakeLists.txt
@@ -45,6 +45,8 @@ mark_as_advanced( PNG_LIBRARY PNG_INCLUDE_DIR )
 
 set ( SOURCES
          ImageIO.cpp
+         BitmapIO.cpp
+         PngIO.cpp
     )
 
 add_library( imageLib SHARED ${SOURCES} )
