--- a/scai/lama/examples/CMakeLists.txt
+++ b/scai/lama/examples/CMakeLists.txt
@@ -43,6 +43,7 @@ add_subdirectory ( stencil )
 add_subdirectory ( nbody )
 add_subdirectory ( tutorial )
 add_subdirectory ( image )
+add_subdirectory ( grid )
 add_subdirectory ( io )
 
 file( COPY run_all.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
