Moved image io from example to lama io stuff

--- a/scai/lama/CMakeLists.txt
+++ b/scai/lama/CMakeLists.txt
@@ -169,6 +169,10 @@ if ( USE_ZLIB AND ZLIB_FOUND )
     target_link_libraries ( ${PROJECT_NAME} ${ZLIB_LIBRARY} )
 endif ( USE_ZLIB AND ZLIB_FOUND ) 
 
+if ( USE_PNGLIB AND PNGLIB_FOUND ) 
+    target_link_libraries ( ${PROJECT_NAME} ${PNGLIB_LIBRARY} )
+endif ( USE_PNGLIB AND PNGLIB_FOUND ) 
+
 ### install ###
 
 ## install lib
