More operations on sections, exampe works full with sections.

--- a/scai/lama/examples/grid/CMakeLists.txt
+++ b/scai/lama/examples/grid/CMakeLists.txt
@@ -32,7 +32,7 @@
  # @date 04.05.2017
 ###
 
-foreach ( executable gridReduction gridExample gemmExample sectionExample )
+foreach ( executable gridReduction gridExample gridSection gemmExample sectionExample )
     add_executable( ${executable}.exe ${executable}.cpp )
     target_link_libraries( ${executable}.exe ${PROJECT_NAME} )
     set ( EXAMPLE_FILES ${EXAMPLE_FILES} ${executable}.cpp )
