Some changes for changed routine names

--- a/scai/solver/examples/spy/CMakeLists.txt
+++ b/scai/solver/examples/spy/CMakeLists.txt
@@ -34,7 +34,7 @@
 
 set ( HEADER Bitmap.hpp )
 
-foreach ( executable spy )
+foreach ( executable spy amg_spy )
     add_executable( ${executable}.exe ${executable}.cpp )
     target_link_libraries( ${executable}.exe ${PROJECT_NAME} )
     set ( EXAMPLE_FILES ${EXAMPLE_FILES} ${executable}.cpp )
