Added first test for GridSection and GridVector.

--- a/scai/lama/test/CMakeLists.txt
+++ b/scai/lama/test/CMakeLists.txt
@@ -46,6 +46,8 @@ scai_project (
     SOURCES
 
         DenseVectorTest
+        GridVectorTest
+        GridSectionTest
         L1NormTest
         L2NormTest
         MaxNormTest
