Added new features GridVector and GridSection, Update of IO with new formats png and bmp

--- a/scai/lama/io/CMakeLists.txt
+++ b/scai/lama/io/CMakeLists.txt
@@ -44,11 +44,18 @@ set ( IO_CLASSES
         PETScIO
         TextIO
         PartitionIO
+        ImageIO
+        BitmapIO
+        PngIO
 ) 
 
 if ( ZLIB_FOUND )
     set ( IO_CLASSES ${IO_CLASSES} MatlabIO MATIOStream )
 endif ( ZLIB_FOUND )
+
+if ( PNGLIB_FOUND )
+    set ( IO_CLASSES ${IO_CLASSES} PngIO )
+endif ( PNGLIB_FOUND )
 
 scai_project (
 
@@ -58,7 +65,7 @@ scai_project (
 
     HEADERS
 
-        CRTPFileIO
+        IOWrapper
 
     ADD_PARENT_SCOPE
 )
