--- a/scai/lama/CMakeLists.txt
+++ b/scai/lama/CMakeLists.txt
@@ -111,6 +111,8 @@ scai_project (
         _SparseVector
 
         DenseVector
+        GridVector
+        GridSection
         SparseVector
 
         Vector
@@ -118,6 +120,8 @@ scai_project (
     HEADERS                  # .hpp only
 
         Scalar
+        GridReadAccess
+        GridWriteAccess
     )
 
 ### add subdirectories
